<package>
  <name>fluna_gazebo</name>
  <version>0.1.0</version>
  <description>Free Lunar Gazebo simulation pacakge</description>
  <maintainer email="pete.blacker@gmail.com">Pete Blacker</maintainer>

  <license>BSD</license>

  <author email="pete.blacker@gmail.com">Pete Blacker</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rorover_skid_steer</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
</package>
