<?xml version="1.0"?>
<package>
  <name>rorover_skid_steer</name>
  <version>0.0.0</version>
  <description>The simplest roll on roll off rover using skid steering</description>

  <maintainer email="pete.blacker@gmail.com">Pete Blacker</maintainer>

  <license>BSD</license>

  <author email="pete.blacker@gmail.com">Pete Blacker</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
